--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ fqdn==1.5.1
 gitdb==4.0.10
 GitPython==3.1.32
 idna==3.4
-importlib-metadata==6.8.0
+importlib-metadata
 ipykernel==6.24.0
 ipython==8.14.0
 ipython-genutils==0.2.0
