--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ gitdb==4.0.10
 GitPython==3.1.32
 idna==3.4
 importlib-metadata
-ipykernel==6.24.0
+ipykernel
 ipython==8.14.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.7
