--- a/requirements.txt
+++ b/requirements.txt
@@ -36,8 +36,8 @@ GitPython==3.1.32
 idna==3.4
 importlib-metadata
 ipykernel
-ipython==8.14.0
-ipython-genutils==0.2.0
+ipython
+ipython-genutils
 ipywidgets==8.0.7
 isoduration==20.11.0
 jedi==0.18.2
