--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ Jinja2==3.1.2
 joblib==1.3.1
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.18.4
+jsonschema
 jsonschema-specifications==2023.7.1
 jupyter==1.0.0
 jupyter-console==6.6.3
