--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ joblib==1.3.1
 json5==0.9.14
 jsonpointer==2.4
 jsonschema
-jsonschema-specifications==2023.7.1
+jsonschema-specifications
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
