--- a/requirements.txt
+++ b/requirements.txt
@@ -51,14 +51,14 @@ jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
 jupyter-lsp
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.23.0
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab-pygments
+jupyterlab-widgets
+jupyterlab_server
 langcodes==3.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
