--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ jupyterlab-pygments
 jupyterlab-widgets
 jupyterlab_server
 langcodes==3.3.0
-markdown-it-py==3.0.0
+markdown-it-py
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
