--- a/requirements.txt
+++ b/requirements.txt
@@ -70,8 +70,8 @@ nbclient
 nbconvert
 nbformat
 nest-asyncio==1.5.6
-notebook==7.0.0
-notebook_shim==0.2.3
+notebook
+notebook_shim
 numpy==1.25.1
 overrides==7.3.1
 packaging==23.1
