--- a/requirements.txt
+++ b/requirements.txt
@@ -104,7 +104,7 @@ PyYAML==6.0.1
 pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
-referencing==0.30.0
+referencing
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
