--- a/requirements.txt
+++ b/requirements.txt
@@ -109,7 +109,7 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.4.2
-rpds-py==0.9.2
+rpds-py
 scikit-learn==1.3.0
 scipy==1.11.1
 Send2Trash==1.8.2
