--- a/requirements.txt
+++ b/requirements.txt
@@ -109,11 +109,10 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.4.2
-scikit-learn==1.3.0
+scikit-learn
 scipy==1.11.1
 Send2Trash==1.8.2
 six==1.16.0
-sklearn==0.0.post7
 smart-open==6.3.0
 smmap==5.0.0
 sniffio==1.3.0
