--- a/requirements.txt
+++ b/requirements.txt
@@ -110,7 +110,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.4.2
 scikit-learn
-scipy==1.11.1
+scipy
 Send2Trash==1.8.2
 six==1.16.0
 smart-open==6.3.0
