--- a/requirements.txt
+++ b/requirements.txt
@@ -122,7 +122,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 srsly==2.4.7
 stack-data==0.6.2
-streamlit==1.25.0
+streamlit
 tenacity==8.2.2
 terminado==0.17.1
 thinc==8.1.10
