--- a/requirements.txt
+++ b/requirements.txt
@@ -131,7 +131,7 @@ tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
-tornado==6.3.2
+tornado
 tqdm==4.65.0
 traitlets==5.9.0
 typer==0.9.0
